feat(footer): update social icons with Sync Socials links and remove Facebook

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,6 +15,7 @@
     <link rel="stylesheet" href="css/footer.css">
     <title>MAXON</title>
 </head>
+
 <body>
     <!--start header-->
     <div class="header">
@@ -81,13 +83,9 @@
         </div>
         <div class="main-video hidden fade">
             <div class="frame-video">
-                <iframe 
-                    width="600px" 
-                    height="410px" 
-                    src="https://www.youtube.com/embed/nVhXp6FX7Y4" 
-                    title="YouTube video player" 
-                    frameborder="0" 
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                <iframe width="600px" height="410px" src="https://www.youtube.com/embed/nVhXp6FX7Y4"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen>
                 </iframe>
             </div>
@@ -111,7 +109,8 @@
                         </div>
                         <div class="bord two">
                             <a href="index.html">gamix<span>.</span></a>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt Lorem Ipsum</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt Lorem Ipsum</p>
                             <div class="icons">
                                 <i class="fab fa-twitch"></i>
                                 <i class="fab fa-twitter"></i>
@@ -134,7 +133,7 @@
                         <textarea rows="6" placeholder="your message"></textarea>
                         <hr>
                         <button>send message</button>
-                    </div>  
+                    </div>
                 </form>
             </div>
         </div>
@@ -191,7 +190,7 @@
                     </div>
                     <div class="txt">
                         <div class="con">
-                            <h1>gaming <br> 
+                            <h1>gaming <br>
                                 <span class="active">online shop</span>
                                 <span class="hidden-txt">community</span>
                             </h1>
@@ -237,7 +236,7 @@
                                 <img src="imgs/game3.jpg">
                             </div>
                             <h5>double dragon</h5>
-                        </div>  
+                        </div>
                         <div class="bord four">
                             <div class="img">
                                 <img src="imgs/game4.jpg">
@@ -264,16 +263,19 @@
                             <div class="txt">
                                 <h2>9</h2>
                                 <p>Years Of Leading</p>
-                            </div>                           
+                            </div>
                         </div>
                         <div class="col-lg-7 bord two">
                             <h5>GAMIX</h5>
                             <h2>A PLACE FOR PROFESSIONAL GAMERS FOR ESPORTS TOURNAMENT WORLDWIDE.</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi voluptatem deserunt ipsam culpa, obcaecati unde quo dignissimos cum ut rem? Fuga commodi, cumque voluptate. Cupiditate.
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi voluptatem deserunt
+                                ipsam culpa, obcaecati unde quo dignissimos cum ut rem? Fuga commodi, cumque voluptate.
+                                Cupiditate.
                                 <br>
                                 <br>
                                 <br>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet fugit incidunt rem laboriosam, voluptas, eaque.
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet fugit incidunt rem
+                                laboriosam, voluptas, eaque.
                             </p>
                             <button>explore more</button>
                         </div>
@@ -425,7 +427,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>                    
+                    </div>
                 </div>
             </div>
         </div>
@@ -434,13 +436,9 @@
         <div class="slider-five">
             <div class="hidden-video">
                 <div class="video-frame">
-                    <iframe 
-                        width="100%" 
-                        height="100%" 
-                        src="https://www.youtube.com/embed/qPNiIeKMHyg" 
-                        title="YouTube video player" 
-                        frameborder="0" 
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/qPNiIeKMHyg"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen>
                     </iframe>
                 </div>
@@ -471,10 +469,10 @@
                         </div>
                         <div class="img">
                             <img src="imgs/brand4.png">
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
         </div>
         <!--end slider five-->
     </div>
@@ -577,9 +575,10 @@
                     <div class="txt">
                         <span>let's play together</span>
                         <h1>join game ESports to become
-                            next PRO gamer today! 
+                            next PRO gamer today!
                         </h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam assumenda fugiat veritatis, mollitia. Nisi, quas.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam assumenda fugiat
+                            veritatis, mollitia. Nisi, quas.</p>
                         <button>join community</button>
                     </div>
                     <div class="col-lg img">
@@ -669,14 +668,29 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <a href="index.html">gamix<span>.</span></a>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam vero officiis rem consectetur sunt cupiditate eius obcaecati, culpa, aspernatur aperiam id.</p>
+                        <a href="index.html" class="brand-link">gamix<span>.</span></a>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam vero officiis rem consectetur
+                            sunt cupiditate eius obcaecati, culpa, aspernatur aperiam id.</p>
                         <div class="icons">
-                            <i class="fab fa-instagram"  data-color="#9147ff"></i>
-                            <i class="fab fa-twitter" data-color="#33ccff"></i>
-                            <i class="fab fa-facebook-f" data-color="#1977f3"></i>
-                            <i class="fab fa-youtube" data-color="#ff0000"></i>
+                            <a href="https://www.instagram.com/sync_socials/" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-instagram" data-color="#9147ff"></i>
+                            </a>
+
+                            <a href="https://x.com/sync_socials" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-twitter" data-color="#33ccff"></i>
+                            </a>
+
+                            <a href="https://www.linkedin.com/company/syncsocials/" target="_blank"
+                                rel="noopener noreferrer">
+                                <i class="fab fa-linkedin" data-color="#1977f3"></i>
+                            </a>
+
+                            <a href="https://www.youtube.com/@sync_socials/shorts" target="_blank"
+                                rel="noopener noreferrer">
+                                <i class="fab fa-youtube" data-color="#ff0000"></i>
+                            </a>
                         </div>
+
                     </div>
                     <div class="col-lg-2">
                         <h2>Site Menu</h2>
@@ -711,7 +725,7 @@
         <section class="three">
             <div class="container">
                 <div class="row">
-                    <h1>©  2025 - Developed by <br><span> Social Sync </span></h1>
+                    <h1>© 2025 - Developed by <br><span> Social Sync </span></h1>
                     <p>all rights reserved.</p>
                 </div>
             </div>
@@ -725,4 +739,5 @@
     <script src="javascript/main.js"></script>
     <!--script files-->
 </body>
+
 </html>
