Update footer: Replace Facebook with LinkedIn and add social URLs, fix icon layout

--- a/index.html
+++ b/index.html
@@ -672,11 +672,19 @@
                         <a href="index.html">gamix<span>.</span></a>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam vero officiis rem consectetur sunt cupiditate eius obcaecati, culpa, aspernatur aperiam id.</p>
                         <div class="icons">
-                            <i class="fab fa-instagram"  data-color="#9147ff"></i>
-                            <i class="fab fa-twitter" data-color="#33ccff"></i>
-                            <i class="fab fa-facebook-f" data-color="#1977f3"></i>
-                            <i class="fab fa-youtube" data-color="#ff0000"></i>
-                        </div>
+                            <a href="https://www.instagram.com/sync_socials/" target="_blank">
+                                <i class="fab fa-instagram" data-color="#9147ff"></i>
+                            </a>
+                            <a href="https://x.com/sync_socials" target="_blank">
+                                <i class="fab fa-twitter" data-color="#33ccff"></i>
+                            </a>
+                            <a href="https://www.linkedin.com/company/syncsocials/" target="_blank">
+                                <i class="fab fa-linkedin" data-color="#0077b5"></i>
+                            </a>
+                            <a href="https://www.youtube.com/@sync_socials/shorts" target="_blank">
+                                <i class="fab fa-youtube" data-color="#ff0000"></i>
+                            </a>
+                        </div>                        
                     </div>
                     <div class="col-lg-2">
                         <h2>Site Menu</h2>
